--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body class="gradient">
-    <h1>Background Generator</h1>
-    <h2>Create CSS Background</h2>
+    <h1>COOL Generator</h1>
+    <h2>This is the background</h2>
     <div>
         <input class="clr1" type="color" name="color1" value="#ff0000">
         <input class="clr2" type="color" name="color2" value="#ffff00">
