--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body class="gradient">
-    <h1>COOL Generator</h1>
+    <h1>Linear Gradient Generator</h1>
     <h2>Create Linear-Gradient Background</h2>
     <div>
         <input class="clr1" type="color" name="color1" value="#ff0000">
