--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body class="gradient">
     <h1>Linear Gradient Generator</h1>
-    <h2>Create Linear-Gradient Background</h2>
+    <h2>Create Colorful Background</h2>
     <div>
         <input class="clr1" type="color" name="color1" value="#ff0000">
         <input class="clr2" type="color" name="color2" value="#ffff00">
