--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <h1>Linear Gradient Generator</h1>
     <h2>Create Colorful Background!</h2>
     <div>
-        <input class="clr1" type="color" name="color1" value="#ff0000">
-        <input class="clr2" type="color" name="color2" value="#ffff00">
+        <input class="clr" type="color" name="color1" value="#ff0000">
+        <input class="clr" type="color" name="color2" value="#ffff00">
     </div>
     <select name="side" id="side">
 
